# MuonPlatform

./: .gitignore  CMakeLists.txt  MuonPlatform.sublime-project  MuonPlatform.sublime-workspace  README.md  testVid.avi
doc/: README.md  System_Fritzing_Diagram.fzz
include/: MuonPlatform.sublime-workspace  README.md  pigpio.c  pigpio.h
include/joystick/: joystick.cc  joystick.hh
src/: GPIO.cpp  GPIO.h  Gyrometer.cpp  Gyrometer.h  I2C.cpp  I2C.h  PinMap.h  README.md  Ranger.cpp  Ranger.h  Region.cpp  Region.h  RegionType.h  Runner.cpp  Runner.h  Sonic.cpp  Sonic.h
test/: .I2CTest.cpp.swo  CVTest1.cpp  DCMotorTest.cpp  GPIOTest.cpp  GPIO_test.cpp  Gyrotest.cpp  I2CTest.cpp  Joystick.cpp  PIRTest.cpp  PathModel.py  PathTest.cpp  README.md  RangeTest.cpp  Ranger.cpp  Servo.cpp  ServoControllerTest.cpp  ServoKeyboard.cpp  SonicTest.cpp  Timing.py  WiringPiController.cpp  motorTest.cpp
